<?xml version="1.0"?>
<package>
  <name>path_costmap_layer</name>
  <version>0.0.0</version>
  <description>The path_costmap_layer package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/path_costmap_layer</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <costmap_2d plugin="${prefix}/plugins.xml"/>
  </export>
</package>
